# Home_Automation_BLE_MESH

Cloud/src/: following.service.app.js
Cloud/src/controllers/: device.controller.js
Cloud/src/mqtt/: mqtthandle.mqtt.js
Cloud/src/routes/device.router/: index.js
Cloud/src/services/: access.service.js  device.service.js
Firmware/Button/Button_Server/: CMakeLists.txt  check  sdkconfig  sdkconfig.old
Firmware/Button/Button_Server/main/: CMakeLists.txt  app_main.c
Firmware/Door/Door_Server/: CMakeLists.txt  sdkconfig  sdkconfig.old
Firmware/Encoder/Encoder_Client/: CMakeLists.txt  sdkconfig  sdkconfig.old
Firmware/Encoder/Encoder_Server/: readme.txt
Firmware/Gateway/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
Firmware/Gateway/ble_mesh_provisioner/: CMakeLists.txt  sdkconfig  sdkconfig.old
Firmware/Gateway/ble_mesh_provisioner/lib/ble_mesh_provisioner/: CMakeLists.txt  ble_mesh_provisioner.c  ble_mesh_provisioner_lib.h  ble_mesh_rgb_gateway.c  ble_mesh_sensor.c  ble_mesh_siren_gateway.c  generic_onoff_button.c
Firmware/Gateway/main/: app_main.h
Firmware/RGB/RGB_Server/: CMakeLists.txt  sdkconfig  sdkconfig.old
Firmware/Sensor/Sensor_Client/: CMakeLists.txt  sdkconfig  sdkconfig.old
Firmware/Siren/Siren_server/: sdkconfig  sdkconfig.old
Software/App/: README.md  pubspec.yaml
Software/App/lib/: lib.dart  main.dart
Software/App/linux/: CMakeLists.txt  my_application.cc
Software/App/web/: index.html  manifest.json
Software/App/windows/: CMakeLists.txt
Software/Cloud/src/: following.service.app.js
(+154 files in other folders)
